--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
         "@babel/preset-react": "^7.13.13",
         "@hot-loader/react-dom": "^17.0.2",
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "prettier": "^2.7.1",
         "raw-loader": "^4.0.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -32,6 +33,7 @@
         "alertifyjs": "^1.13.1",
         "aos": "^2.3.4",
         "apollo-boost": "^0.4.9",
+        "apollo-upload-client": "^17.0.0",
         "babel-loader": "^8.2.5",
         "bcrypt": "^5.0.1",
         "bootstrap": "^5.1.3",
@@ -42,10 +44,12 @@
         "jquery": "^3.6.0",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
+        "laravel-echo": "^1.12.1",
         "module": "^1.2.5",
         "moment": "^2.29.3",
         "node-polyfill-webpack-plugin": "^2.0.0",
         "path-browserify": "^1.0.1",
+        "pusher-js": "^7.2.0",
         "react-bootstrap": "^2.4.0",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
